# teleport

./: .gitignore  AGENTS.md  README.md  devenv.nix  flatpak_flutter.yaml  foreign.json  gd.nexus.teleport.yaml  local.properties  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: background_service.dart  file_sender.dart  main.dart  notifications.dart  onboarding_page.dart  pairing.dart  send_page.dart  shared_peer_sheet.dart
lib/core/services/: background_service.dart  notification_service.dart  sharing_sink.dart  window_manager_service.dart
lib/core/theme/: teleport_dark_theme.dart  teleport_light_theme.dart  teleport_theme.dart
lib/core/widgets/: teleport_background.dart
lib/data/state/: teleport_store.dart
lib/features/home/: home_page.dart
lib/features/onboarding/: onboarding.dart  onboarding_page.dart  widgets.dart
lib/features/pairing/: incoming_pairing_sheet.dart  pairing_page.dart  pairing_tab.dart
lib/features/send/: file_sender.dart  send_page.dart
lib/features/settings/: settings.dart  settings_page.dart  widgets.dart
lib/state/: teleport_store.dart
linux/: CMakeLists.txt  gd.nexus.teleport.desktop
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: config.rs  frb_generated.rs  lib.rs  promise.rs  service.rs
rust/src/api/: teleport.rs
rust/src/protocol/: framed.rs  keepalive.rs  mod.rs  pair.rs  send.rs
rust/src/service/: config.rs  conn_quality.rs  keepalive.rs  mod.rs  pairing.rs  supervisor.rs  transfer.rs
rust/src/util/: mod.rs  promise.rs  speed.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_teleport.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_teleport.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+24 files in other folders)
