[package]
name = "rust_lib_teleport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = { version = "=2.11.1", default-features = false, features = [
    "anyhow",
    "dart-opaque",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "user-utils",
    "wasm-start",
] }
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
iroh-blobs = "0.97.0"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = { version = "0.9.2", features = ["os_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["fs"] }
toml_edit = { version = "0.24.0", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = { version = "0.2.0" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
